# mail-agent

./: .gitignore  README.md  demo_advanced_llm.py  demo_llm.py  pyproject.toml  run.py  setup.py
config/: categories.csv  config.env
config/secrets/: client_secret_396329356766-kpflsue8b2f5t3dnpq7g3lot9f029e5b.apps.googleusercontent.com.json  secrets.env
instance/: mail_agent.db
src/instance/: mail_agent.db
src/mail_agent/: __init__.py  app.py  cli.py  config.py  forms.py  gmail.py  gmail_example_new.py  html_utils.py  models.py
src/mail_agent/ai/: manager.py
src/mail_agent/ai/prompts/: email_analysis.txt  email_classification.txt  general_analysis.txt  system.txt  topic_extraction.txt
src/mail_agent/cli/: __init__.py  __main__.py  config.py  db.py  mail.py  main.py  utils.py
src/mail_agent/instance/: mail_agent.db
src/mail_agent/routes/: __init__.py  auth.py  instructions.py  main.py
src/mail_agent/static/css/: style.css
src/mail_agent/static/js/: main.js
src/mail_agent/templates/: base.html  index.html  instructions.html  page.html
test/: categories.csv  extract.ipynb  test.ipynb
